cli/tests/ui/exports_not_object.stderr
Error: manifest::validation_error

  × check failed
  ╰─▶ manifest validation error at exports: expected object, found array
    ╭─[<CARGO_MANIFEST_DIR>/tests/ui/exports_not_object.json5:30:12]
 29 │   ],
 30 │   exports: [],
    ·            ─┬
    ·             ╰── expected object, found array
 31 │ }
    ╰────
